- Rename kvstruct to kvmapstruct - Remove some packages unused

--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/uthng/kvstruct
+package: github.com/uthng/kvmapstruct
 import:
 - package: github.com/fatih/structs
 - package: github.com/hashicorp/consul
